# shepard-hooks-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/c4/: c1-system-context.puml  c2-container.puml  c3-hook-components.puml  c4-hook-event-flow.puml
src/: emit.rs  git_context.rs  main.rs  otlp.rs  sensitive.rs
src/cmd/: emit_metric.rs  emit_traces.rs  hook.rs  mod.rs  parse_session.rs
src/hooks/: claude.rs  codex.rs  context.rs  gemini.rs  mod.rs
src/parsers/: claude.rs  codex.rs  common.rs  gemini.rs  mod.rs
tests/: integration.rs
tests/fixtures/: claude-session.jsonl  codex-session.jsonl  gemini-session.json
tests/parity/: test-metric-parity.sh  test-parser-parity.sh
