[package]
name = "shepard-hook"
version = "0.3.0"
edition = "2024"
description = "Rust accelerator for shepard-obs-stack hooks — replaces jq/curl with a single binary"
license = "Elastic-2.0"
repository = "https://github.com/shepard-system/shepard-hooks-rs"

[[bin]]
name = "shepard-hook"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
